--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,6 @@ body {
   width: 6px;
   height: 6px;
   border-radius: 5px;
-  background: #fff;
   box-shadow: 0 0 9px rgba(255, 255, 255, .7);
 }
 .loader .circle:nth-child(2) {
@@ -109,4 +108,11 @@ body {
     transform: rotate(945deg);
     opacity: 0;
   }
+}circle,
+rect,
+line {
+  stroke-width: 10px;
+  stroke-linecap: round;
+  fill: transparent;
 }
+
