--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,3 +125,74 @@ line {
 body.overflow-hidden .page{
   overflow: hidden;
 }
+
+.iconLabel{
+  animation: rotate 1.2s linear infinite;
+}
+
+@keyframes rotate{
+  50%{
+    border-left-color: #9b59b6;
+  }
+  75%{
+    border-left-color: #e67e22;
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+
+#check {
+  display:none;
+}
+
+#check:checked ~ .iconLabel {
+  animation: none;
+  border-color: #5cb85c;
+  transition: border 0.5s ease-out;
+} 
+
+.icon{
+  display:none;
+}
+
+.icon::after{
+  position:absolute;
+  content: "";
+  height:56px;
+  width: 28px;
+  border-top: 4px solid #5cb85c;
+  border-right: 4px solid #5cb85c;
+  left: 28px;
+  top: 50%;
+  transform: scaleX(-1) rotate(135deg);
+  transform-origin: left top;
+  animation: icon 1.8s ease;
+}
+
+@keyframes icon {
+  0%{
+    width: 0;
+    height:0;
+    opacity:1;
+  }
+  20%{
+    height:0;
+    width: 28px;
+    opacity:1;
+  }
+  50%{
+    height:56px;
+    width: 28px;
+    opacity:1;
+  }
+  100%{
+    height:56px;
+    width: 28px;
+    opacity:1;
+  }
+}
+
+#check:checked ~ .iconLabel .icon{
+  display: block;
+}
